@@ -1,3 +1,9 @@
+1998-08-24  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-support.m4 (GCC_NEED_DECLARATIONS): Added `setreuid',
+	`setregid' and `getpagesize'.
+	(AC_TYPE_UID_T): New check.
+
 1998-08-18  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-libgtop-check.m4: make it require libgtop >= 0.25.0.
